--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
         </div>
     </div>
     
+    <!-- Clear Confirmation Modal -->
+    <div id="clearModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Clear Canvas</h3>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to clear the entire canvas?</p>
+            </div>
+            <div class="modal-footer">
+                <button id="modalCancel" class="modal-btn">Cancel</button>
+                <button id="modalConfirm" class="modal-btn modal-btn-primary">Clear</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
