save some state in local storage

--- a/index.html
+++ b/index.html
@@ -20,22 +20,16 @@
                         <span class="icon material-symbols-outlined">ink_eraser</span>
                     </button>
                     <button class="tool-btn" data-tool="line" title="Line">
-                        <span class="icon material-symbols-outlined">straighten</span>
+                        <span class="icon material-symbols-outlined">show_chart</span>
                     </button>
                     <button class="tool-btn" data-tool="rectangle" title="Rectangle">
-                        <span class="icon material-symbols-outlined">crop_free</span>
+                        <span class="icon material-symbols-outlined">square</span>
                     </button>
                     <button class="tool-btn" data-tool="circle" title="Circle">
                         <span class="icon material-symbols-outlined">radio_button_unchecked</span>
                     </button>
                     <button class="tool-btn" data-tool="fill" title="Fill">
                         <span class="icon material-symbols-outlined">format_color_fill</span>
-                    </button>
-                    <button class="tool-btn" data-tool="zoom" title="Zoom In">
-                        <span class="icon material-symbols-outlined">zoom_in</span>
-                    </button>
-                    <button class="tool-btn" data-tool="zoomOut" title="Zoom Out">
-                        <span class="icon material-symbols-outlined">zoom_out</span>
                     </button>
                     <button class="tool-btn" data-tool="pan" title="Pan">
                         <span class="icon material-symbols-outlined">pan_tool_alt</span>
