tniap.com rendering issues again

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         /* Show content immediately if no auth required class is on html element */
         html.no-auth-required .app-container {
-            display: block !important;
+            display: flex !important;
         }
     </style>
     <script>
